# ocr-pdf

./: .gitignore  README.md
repo-root/: .dockerignore  .env.example  .env.old  DEPLOYMENT.md  DOCKER_QUICKSTART.md  Dockerfile  Dockerfile.with-ollama  README.md  SCALING_QUICKSTART.md  SERVER_MODE_COMPARISON.md  SERVER_MODE_README.md  UPGRADE_TO_SCALED.md  benchmark_modes.py  build.bat  build.ps1  build.sh  docker-build-test.ps1  docker-build.ps1  docker-build.sh  docker-compose-full.yml  docker-compose-scaled.yml  docker-compose.yml  docker_test.sh  init-replica.sh  init-replication.sh  nginx.conf  prometheus.yml  pyproject.toml  requirements.txt  setup_check.py  test_rag.py  test_strtree_mapping.py  test_table_extractor.py
repo-root/docs/: DOCKER_ARCHITECTURE.md  DOCKER_DEPLOYMENT.md  INDEX.md  PAGE_ALIGNMENT_GUIDE.md  PROJECT_ANALYSIS_2025.md  README.md
repo-root/docs/deployment/: DEPLOYMENT.md  DOCKER_BUILD_VERIFICATION.md  DOCKER_DEPLOYMENT.md  DOCKER_QUICKSTART.md  DOCKER_SETUP.md  SCALED_DEPLOYMENT.md
repo-root/docs/guides/: QUICK_START_RAG.md  RAG_SYMBOL_RECOGNITION_GUIDE.md  RASTER_COMPARISON_GUIDE.md  STREAMLIT_FEATURES.md
repo-root/docs/reference/: DATABASE_COMPARISON.md  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  SERVER_MODE_COMPARISON.md  (+1 more)
repo-root/pdf_compare/: __init__.py  cli.py  compare.py  compare_new.py  db_backend.py  db_backend_scaled.py  db_models.py  models.py  overlay.py  page_alignment.py  pdf_extract.py  pdf_extract_server.py  rag_simple.py  rag_symbol_recognition.py  raster_diff.py  raster_diff_debug.py  raster_grid.py  raster_grid_improved.py  search.py  search_new.py  store.py  store_new.py  table_extractor.py  table_workflows.py  worker_pool.py
repo-root/pgbouncer/: entrypoint.sh  pgbouncer.ini  userlist.txt
repo-root/scripts/: check-scaled-health.sh
repo-root/ui/: streamlit_app.py  streamlit_session_manager.py
(+9 files in other folders)
