[project]
name = "pdf-compare"
version = "0.1.0"
description = "Local PDF vector extraction, search, and revision diff"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pymupdf>=1.24.8,<1.27",
  "shapely>=2.0.2,<2.1",
  "rtree>=1.2.0,<1.3",
  "numpy>=1.26,<3",
  "pillow>=10.3,<12",
  "typer>=0.12,<1.0",
  "streamlit>=1.32,<1.40",
]

[project.scripts]
compare-pdf-revs = "pdf_compare.cli:app"   # exposes the Typer CLI

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
