[project]
name = "pdf-compare"
version = "0.1.0"
description = "Local PDF vector extraction, search, and revision diff"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pymupdf>=1.24.8,<1.28",
  "shapely>=2.0.2,<2.2",
  "rtree>=1.2.0,<1.5",
  "numpy>=1.26,<3",
  "pillow>=10.3,<12",
  "typer>=0.12,<1.0",
  "streamlit>=1.32,<1.51",
  "opencv-python>=4.8,<5.0",
  "pytesseract>=0.3.10,<0.4",
  "scikit-image>=0.21.0,<0.26",
  "pikepdf>=8.0.0,<10.0",
  "sqlalchemy>=2.0.0,<2.1",
  "alembic>=1.13.0,<1.14",
  "psycopg2-binary>=2.9.0,<3.0",
  "asyncpg>=0.29.0,<0.30",
  "geoalchemy2>=0.14.0,<0.15",
  "psutil>=5.9.0,<7.0",
  "langchain>=0.1.0,<0.3",
  "langchain-community>=0.0.10,<0.3",
  "langchain-ollama>=0.1.0,<0.2",
  "chromadb>=0.4.0,<0.6",
  "sentence-transformers>=2.2.0,<3.0",
  "pypdf>=3.17.0,<5.0",
  "tiktoken>=0.5.0,<0.8",
  "faiss-cpu>=1.7.4,<1.9",
]

[project.scripts]
compare-pdf-revs = "pdf_compare.cli:app"   # exposes the Typer CLI

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pdf_compare", "pdf_compare.analyzers"]
